# jack-analyser

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  SConstruct  compile_commands.json  imgui.ini  main.cpp  readme.md  resources.h  scope.cpp  scope.hpp
include/: audio_buffer.hpp  window.hpp
lib/: CMakeLists.txt
resources/: main.glade  scope.frag  scope.vert
src/: main.rs
